--- a/docker/Dockerfile.esp
+++ b/docker/Dockerfile.esp
@@ -1,5 +1,5 @@
 ARG version
-FROM tschaffter/debian:user-${version}
+FROM ahayden/debian:user-${version}
 
 # Install ESP-IDF prerequisites
 RUN sudo apt-get update -qq -y \
