--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,9 +41,9 @@ jobs:
         id: vars
         run: |
           echo ::set-output \
-            name=repository::tschaffter/${{ github.event.repository.name }}
-          echo ::set-output name=user::tschaffter
-          if [[ ${GITHUB_REF} = refs/tags/* ]]
+            name=repository::ahayden/${{ github.event.repository.name }}
+          echo ::set-output name=user::ahayden
+          if [[ ${GITHUB_REF} = refs/tags/* ]ahayden
           then
             echo ::set-output name=version::${GITHUB_REF#refs/tags/}
             echo ::set-output name=push::true
@@ -53,7 +53,7 @@ jobs:
           fi
 
       - name: Build Dockerfile.base
-        uses: docker/build-push-action@v1
+        uses: docker/build-push-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
@@ -65,7 +65,7 @@ jobs:
           push: ${{ steps.vars.outputs.push }}
 
       - name: Build Dockerfile.user
-        uses: docker/build-push-action@v1
+        uses: docker/build-push-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
@@ -90,7 +90,7 @@ jobs:
           push: ${{ steps.vars.outputs.push }}
 
       - name: Build Dockerfile.cxx
-        uses: docker/build-push-action@v1
+        uses: docker/build-push-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
@@ -102,7 +102,7 @@ jobs:
           push: ${{ steps.vars.outputs.push }}
 
       - name: Build Dockerfile.conda
-        uses: docker/build-push-action@v1
+        uses: docker/build-push-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
@@ -115,7 +115,7 @@ jobs:
           push: ${{ steps.vars.outputs.push }}
 
       - name: Build Dockerfile.synapse
-        uses: docker/build-push-action@v1
+        uses: docker/build-push-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
@@ -127,7 +127,7 @@ jobs:
           push: ${{ steps.vars.outputs.push }}
 
       - name: Build Dockerfile.docker
-        uses: docker/build-push-action@v1
+        uses: docker/build-push-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
