--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,84 +72,84 @@ jobs:
           build_args: "version=${{ steps.vars.outputs.version }}"
           push: ${{ steps.vars.outputs.push }}
 
-      - name: Build Dockerfile.user
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ${{ steps.vars.outputs.repository }}
-          tags: user-latest, user-${{ steps.vars.outputs.version }}
-          path: ./docker
-          dockerfile: ./docker/Dockerfile.user
-          build_args: "user=${{ steps.vars.outputs.user }},\
-            version=${{ steps.vars.outputs.version }}"
-          push: ${{ steps.vars.outputs.push }}
+#     - name: Build Dockerfile.user
+#       uses: docker/build-push-action@v1
+#       with:
+#         username: ${{ secrets.DOCKER_USERNAME }}
+#         password: ${{ secrets.DOCKER_PASSWORD }}
+#         repository: ${{ steps.vars.outputs.repository }}
+#         tags: user-latest, user-${{ steps.vars.outputs.version }}
+#         path: ./docker
+#         dockerfile: ./docker/Dockerfile.user
+#         build_args: "user=${{ steps.vars.outputs.user }},\
+#           version=${{ steps.vars.outputs.version }}"
+#         push: ${{ steps.vars.outputs.push }}
 
-      - name: Build Dockerfile.python
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ${{ steps.vars.outputs.repository }}
-          tags: python-latest, python-${{ steps.vars.outputs.version }}
-          path: ./docker
-          dockerfile: ./docker/Dockerfile.python
-          build_args: "version=${{ steps.vars.outputs.version }}"
-          push: ${{ steps.vars.outputs.push }}
+#     - name: Build Dockerfile.python
+#       uses: docker/build-push-action@v1
+#       with:
+#         username: ${{ secrets.DOCKER_USERNAME }}
+#         password: ${{ secrets.DOCKER_PASSWORD }}
+#         repository: ${{ steps.vars.outputs.repository }}
+#         tags: python-latest, python-${{ steps.vars.outputs.version }}
+#         path: ./docker
+#         dockerfile: ./docker/Dockerfile.python
+#         build_args: "version=${{ steps.vars.outputs.version }}"
+#         push: ${{ steps.vars.outputs.push }}
 
-      - name: Build Dockerfile.cxx
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ${{ steps.vars.outputs.repository }}
-          tags: cxx-latest, cxx-${{ steps.vars.outputs.version }}
-          path: ./docker
-          dockerfile: ./docker/Dockerfile.cxx
-          build_args: "version=${{ steps.vars.outputs.version }}"
-          push: ${{ steps.vars.outputs.push }}
+#     - name: Build Dockerfile.cxx
+#       uses: docker/build-push-action@v1
+#       with:
+#         username: ${{ secrets.DOCKER_USERNAME }}
+#         password: ${{ secrets.DOCKER_PASSWORD }}
+#         repository: ${{ steps.vars.outputs.repository }}
+#         tags: cxx-latest, cxx-${{ steps.vars.outputs.version }}
+#         path: ./docker
+#         dockerfile: ./docker/Dockerfile.cxx
+#         build_args: "version=${{ steps.vars.outputs.version }}"
+#         push: ${{ steps.vars.outputs.push }}
 
-      - name: Build Dockerfile.conda
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ${{ steps.vars.outputs.repository }}
-          tags: conda-latest, conda-${{ steps.vars.outputs.version }}
-          path: ./docker
-          dockerfile: ./docker/Dockerfile.conda
-          build_args: "user=${{ steps.vars.outputs.user }},\
-            version=${{ steps.vars.outputs.version }}"
-          push: ${{ steps.vars.outputs.push }}
+#     - name: Build Dockerfile.conda
+#       uses: docker/build-push-action@v1
+#       with:
+#         username: ${{ secrets.DOCKER_USERNAME }}
+#         password: ${{ secrets.DOCKER_PASSWORD }}
+#         repository: ${{ steps.vars.outputs.repository }}
+#         tags: conda-latest, conda-${{ steps.vars.outputs.version }}
+#         path: ./docker
+#         dockerfile: ./docker/Dockerfile.conda
+#         build_args: "user=${{ steps.vars.outputs.user }},\
+#           version=${{ steps.vars.outputs.version }}"
+#         push: ${{ steps.vars.outputs.push }}
 
-      - name: Build Dockerfile.synapse
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ${{ steps.vars.outputs.repository }}
-          tags: synapse-latest, synapse-${{ steps.vars.outputs.version }}
-          path: ./docker
-          dockerfile: ./docker/Dockerfile.synapse
-          build_args: "version=${{ steps.vars.outputs.version }}"
-          push: ${{ steps.vars.outputs.push }}
+#     - name: Build Dockerfile.synapse
+#       uses: docker/build-push-action@v1
+#       with:
+#         username: ${{ secrets.DOCKER_USERNAME }}
+#         password: ${{ secrets.DOCKER_PASSWORD }}
+#         repository: ${{ steps.vars.outputs.repository }}
+#         tags: synapse-latest, synapse-${{ steps.vars.outputs.version }}
+#         path: ./docker
+#         dockerfile: ./docker/Dockerfile.synapse
+#         build_args: "version=${{ steps.vars.outputs.version }}"
+#         push: ${{ steps.vars.outputs.push }}
 
-      - name: Build Dockerfile.docker
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ${{ steps.vars.outputs.repository }}
-          tags: docker-latest, docker-${{ steps.vars.outputs.version }}
-          path: ./docker
-          dockerfile: ./docker/Dockerfile.docker
-          build_args: "user=${{ steps.vars.outputs.user }},\
-            version=${{ steps.vars.outputs.version }}"
-          push: ${{ steps.vars.outputs.push }}
+#     - name: Build Dockerfile.docker
+#       uses: docker/build-push-action@v1
+#       with:
+#         username: ${{ secrets.DOCKER_USERNAME }}
+#         password: ${{ secrets.DOCKER_PASSWORD }}
+#         repository: ${{ steps.vars.outputs.repository }}
+#         tags: docker-latest, docker-${{ steps.vars.outputs.version }}
+#         path: ./docker
+#         dockerfile: ./docker/Dockerfile.docker
+#         build_args: "user=${{ steps.vars.outputs.user }},\
+#           version=${{ steps.vars.outputs.version }}"
+#         push: ${{ steps.vars.outputs.push }}
 
-      # - name: Push README to Docker Hub
-      #   uses: peter-evans/dockerhub-description@v2
-      #   env:
-      #     DOCKERHUB_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-      #     DOCKERHUB_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      #     DOCKERHUB_REPOSITORY: ${{ steps.vars.outputs.repository }}
+#     # - name: Push README to Docker Hub
+#     #   uses: peter-evans/dockerhub-description@v2
+#     #   env:
+#     #     DOCKERHUB_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+#     #     DOCKERHUB_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+#     #     DOCKERHUB_REPOSITORY: ${{ steps.vars.outputs.repository }}
