--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,12 +56,14 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Login to DockerHub
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Build and Push Dockerfile.base
+        if: github.event_name != 'pull_request'
         uses: docker/build-push-action@v2
         with:
           tags: | 
@@ -74,6 +76,7 @@ jobs:
           push: ${{ steps.vars.outputs.push }}
 
       - name: Build Dockerfile.user
+        if: github.event_name != 'pull_request'
         uses: docker/build-push-action@v2
         with:
           tags: | 
